4 April 2007
+ Updated language functions.
+ Added German translation.

13 March 2007
+ Removed border from icons. not xhtml compliant
+ changed style sheet to work under IE7 again

5 March 2007
+ Changed control panel icon

Version 2.0.3
--------------------------------------------------------------
26 February 2007
+ Added style sheet changes recommended from SingleTrack.

Version 2.0.2
--------------------------------------------------------------
21 February 2007
+ Fixed bugs with unregister function.

Version 2.0.1
--------------------------------------------------------------
19 February 2007
+ Moved and reduced translate functions
+ Added some commenting

16 February 2007
+ Added translate functions.
+ Removed object contructor references.