@@ -1,0 +1,15 @@
+<h1>{FORM_TITLE}</h1>
+<br />
+{START_FORM}
+
+<strong>{LABEL_LABEL}</strong><br />
+{LABEL}
+
+<br /><br />
+<strong>{DESCRIPTION_LABEL}</strong><br />
+{DESCRIPTION}
+<br /><br />
+{SUBMIT}
+<br /><br />
+<div class="align-center">{CLOSE}</div>
+{END_FORM}
