@@ -1,10 +1,10 @@
 <!-- BEGIN tab-list -->
 <div class="tab-item">
-    <div class="tab-title">{TACTION} {TAB}</div>
+    <div class="tab-title">{TACTION} {TAB} - {EDIT_TAB}</div>
     <!-- BEGIN link-list-on -->
     <ol style="margin-bottom : 2px; margin-top : 2px; list-style-type: none">
       <!-- BEGIN link-list -->
-      <li><div class="link-list">{LACTION} {LINK}</div></li>
+      <li><div class="link-list">{LACTION} {LINK} - {EDIT_LINK}</div></li>
       <!-- END link-list -->
     </ol>
     <!-- END link-list-on -->
