@@ -1,0 +1,9 @@
+<h1>{FORM_TITLE}</h1>
+<br />
+{START_FORM}
+<strong>{TITLE_LABEL}</strong>&nbsp;
+{TITLE}
+{SUBMIT}
+<br /><br />
+<div class="align-center">{CLOSE}</div>
+{END_FORM}
